fix discount alignment

--- a/src/pages/integrations/gift-cards/buy-card/buy-card.scss
+++ b/src/pages/integrations/gift-cards/buy-card/buy-card.scss
@@ -44,7 +44,10 @@ buy-card-page {
       display: flex;
 
       padding-left: 15px;
-      // justify-content: center;
+
+      div {
+        text-align: left;
+      }
 
       img {
         margin-right: 10px;
